fixed the scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-}
-
 .custom-active {
   background-color: rgb(235, 235, 235);
 }
